--- a/AndroidApp/app/src/main/res/layout/fragment_preservative.xml
+++ b/AndroidApp/app/src/main/res/layout/fragment_preservative.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HygieneFragment">
+    tools:context=".PreservativeFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -16,7 +16,7 @@
             android:id="@+id/hygieneTopTitleTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/cleanUs"
+            android:text="@string/condomKnowledge"
             android:textSize="18sp"
             android:textAlignment="center"
             android:textStyle="bold"/>
@@ -24,38 +24,40 @@
 
         <!-- Descripción justo debajo del título -->
         <TextView
-            android:id="@+id/hygieneDescriptionTextView"
+            android:id="@+id/preservativeDescriptionTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/text_hygiene"
+            android:text="@string/text_condom"
             android:layout_below="@id/hygieneTopTitleTextView"
             android:layout_marginTop="16dp"
             android:textSize="18sp"
             android:textAlignment="center"/>
 
-        <!-- Título justo debajo de la imagen -->
+
+        <!-- Nueva sección con una lista -->
+        <TextView
+            android:id="@+id/listTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/preservativeDescriptionTextView"
+            android:layout_marginTop="16dp"
+            android:text="@string/condom_steps"
+            android:textSize="16sp"
+            android:textColor="@android:color/black"/>
 
         <!-- Imagen entre la descripción y el siguiente título -->
-
-        <TextView
-            android:id="@+id/hygieneTitleTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/staticImageView"
-            android:layout_marginTop="-369dp"
-            android:text="@string/bathroom"
-            android:textAlignment="center"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-
         <ImageView
             android:id="@+id/staticImageView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/hygieneDescriptionTextView"
-            android:layout_marginTop="16dp"
-            android:src="@drawable/ducha" />
-        <!-- Resto del contenido, como el GridLayout, debajo del segundo título -->
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_below="@id/preservativeDescriptionTextView"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="300dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginBottom="16dp"
+            android:src="@drawable/condom"
+            android:layout_centerInParent="true"/>
 
     </RelativeLayout>
 </androidx.core.widget.NestedScrollView>
