--- a/AndroidApp/app/src/main/res/layout/fragment_hygiene.xml
+++ b/AndroidApp/app/src/main/res/layout/fragment_hygiene.xml
@@ -1,6 +1,5 @@
 <!-- res/layout/fragment_hygiene.xml -->
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -54,7 +53,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/hygieneDescriptionTextView"
             android:layout_marginTop="16dp"
-            android:src="@drawable/ducha" />
+            android:src="@drawable/ducha"
+            android:contentDescription="@string/image_bath_description"/>
         <!-- Resto del contenido, como el GridLayout, debajo del segundo título -->
 
     </RelativeLayout>
