--- a/AndroidApp/app/src/main/res/layout/fragment_compress.xml
+++ b/AndroidApp/app/src/main/res/layout/fragment_compress.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PillsFragment">
+    tools:context=".CompressFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -13,10 +13,10 @@
 
         <!-- Título arriba del todo -->
         <TextView
-            android:id="@+id/pillsTopTitleTextView"
+            android:id="@+id/compressTopTitleTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/pillsTitle"
+            android:text="@string/title_compress"
             android:textSize="18sp"
             android:textAlignment="center"
             android:textStyle="bold"/>
@@ -24,41 +24,43 @@
 
         <!-- Descripción justo debajo del título -->
         <TextView
-            android:id="@+id/pillsDescriptionView"
+            android:id="@+id/compressDescriptionTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/text_pills"
-            android:layout_below="@id/pillsTopTitleTextView"
+            android:text="@string/text_compress"
+            android:layout_below="@id/compressTopTitleTextView"
             android:layout_marginTop="16dp"
             android:textSize="18sp"
-            android:textAlignment="center"/>
+            android:textAlignment="center"
+            />
 
+        <!-- Título justo debajo de la imagen -->
 
+        <!-- Imagen entre la descripción y el siguiente título -->
+
+        <!-- Nueva sección con una lista -->
         <TextView
             android:id="@+id/listTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/pillsDescriptionView"
+            android:layout_below="@id/compressDescriptionTextView"
             android:layout_marginTop="16dp"
-            android:text="@string/pills_steps"
+            android:text="@string/compress_steps"
             android:textSize="16sp"
             android:textColor="@android:color/black"
             android:textStyle="bold"/>
 
         <!-- Imagen entre la descripción y el siguiente título -->
-        <!-- Imagen entre la descripción y el siguiente título -->
         <ImageView
             android:id="@+id/staticImageView"
             android:layout_width="200dp"
             android:layout_height="200dp"
-            android:layout_below="@id/pillsDescriptionView"
-            android:layout_centerInParent="true"
+            android:layout_below="@id/compressDescriptionTextView"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="230dp"
+            android:layout_marginTop="300dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginRight="0dp"
             android:layout_marginBottom="16dp"
-            android:src="@drawable/pills" />
-
+            android:src="@drawable/compress"
+            android:layout_centerInParent="true"/>
     </RelativeLayout>
 </androidx.core.widget.NestedScrollView>
