--- a/AndroidApp/app/src/main/res/layout/fragment_first.xml
+++ b/AndroidApp/app/src/main/res/layout/fragment_first.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -31,10 +30,10 @@
             android:layout_marginBottom="16dp"/>
 
         <Button
-            android:id="@+id/buttonVPH"
+            android:id="@+id/buttonMenstruation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/vph"
+            android:text="@string/menstruation"
             android:layout_marginBottom="16dp"/>
 
     </LinearLayout>
