--- a/AndroidApp/app/src/main/res/layout/fragment_relations.xml
+++ b/AndroidApp/app/src/main/res/layout/fragment_relations.xml
@@ -43,7 +43,8 @@
             android:layout_below ="@+id/relationsDescriptionView"
             android:text="@string/relations_advices"
             android:textSize="16sp"
-            android:textColor="@android:color/black"/>
+            android:textColor="@android:color/black"
+            android:textStyle="bold"/>
 
         <!-- Imagen entre la descripción y el siguiente título -->
         <ImageView
