--- a/AndroidApp/app/src/main/res/layout/fragment_v_p_h.xml
+++ b/AndroidApp/app/src/main/res/layout/fragment_v_p_h.xml
@@ -1,14 +1,52 @@
-<?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!-- res/layout/fragment_hygiene.xml -->
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".diseases.VPHFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:padding="16dp">
 
-</FrameLayout>
+        <!-- Título arriba del todo -->
+        <TextView
+            android:id="@+id/vphTopTitleTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/vph_fragment_label"
+            android:textSize="18sp"
+            android:textAlignment="center"
+            android:textStyle="bold"/>
+
+
+        <!-- Descripción justo debajo del título -->
+        <TextView
+            android:id="@+id/vphDescriptionTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/text_vph"
+            android:layout_below="@id/vphTopTitleTextView"
+            android:layout_marginTop="16dp"
+            android:textSize="18sp"
+            android:textAlignment="center"/>
+
+        <!-- Título justo debajo de la imagen -->
+
+        <!-- Imagen entre la descripción y el siguiente título -->
+
+
+        <ImageView
+            android:id="@+id/vphImageView"
+            android:layout_width="wrap_content"
+            android:layout_height="400dp"
+            android:layout_below="@id/vphDescriptionTextView"
+            android:layout_marginTop="28dp"
+            android:scaleType="fitCenter"
+            android:contentDescription="@string/image_bath_description"
+            android:src="@drawable/vph" />
+        <!-- Resto del contenido, como el GridLayout, debajo del segundo título -->
+
+    </RelativeLayout>
+</androidx.core.widget.NestedScrollView>
